# llvm-kaleidoscope

./: .gitignore  CMakeLists.txt  ast.h  binop_precedence.h  build.sh  builder_manager.h  codegen.h  debug.h  dispatch.h  error.h  lex.h  llvm_helper.h  llvm_includes.h  main.cpp  module_manager.h  named_values.h  parse.h  parser.h  producer.cpp  producer.h  source.h  source_location.h  string_helper.h  toy.cpp
ast/: ast.h  ast_abs.h  ast_binary_expr.h  ast_call_expr.h  ast_expr.h  ast_for_expr.h  ast_function.h  ast_function_prototype.h  ast_if_expr.h  ast_number_expr.h  ast_parse.h  ast_unary_expr.h  ast_var_expr.h  ast_variable_expr.h
debuginfo/: debuginfo.h  debuginfo_abs.h  debuginfo_manager.cpp  debuginfo_manager.h
intent/: language.txt
llvm-ir-test/: build.sh  hello.las
vsxu/string/: vsx_string_helper.h
